jira-due-fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jira-due-frontend
  namespace: jira-due
spec:
  selector:
    app: jira-due-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
